// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`itemMap should render a apple icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Apple"
  >
    <ForwardRef(LinkComponent)
      href="https://apple.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a docs icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Docs"
  >
    <ForwardRef(LinkComponent)
      href="https://docs.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a github icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Github"
  >
    <ForwardRef(LinkComponent)
      href="https://github.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a google icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Google"
  >
    <ForwardRef(LinkComponent)
      href="https://google.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a link icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Link"
  >
    <ForwardRef(LinkComponent)
      href="https://google.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a linkedin icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="LinkedIn"
  >
    <ForwardRef(LinkComponent)
      href="https://linkedin.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a youtube icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="YouTube"
  >
    <ForwardRef(LinkComponent)
      href="https://youtube.com"
    >
      <Memo
        sx={
          {
            "mt": 0.7,
          }
        }
      />
    </ForwardRef(LinkComponent)>
  </ForwardRef(Tooltip)>
</div>
`;
